--- a/blot.html
+++ b/blot.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>ODOBASIC ver 0.1</title>
+  <title>OBA synthesizer</title>
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bulma@1.0.0/css/bulma.min.css">
   <script defer src="https://cdn.jsdelivr.net/npm/alpinejs@3.x.x/dist/cdn.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2.39.7/dist/umd/supabase.min.js"></script>
@@ -16,7 +16,48 @@
       border: 2px solid #00bfff !important;
       box-shadow: 0 0 2px #00bfff;
     }
-    
+    .shadow-row {
+      background: #111 !important;
+      color: #00ff88;
+      font-style: italic;
+      cursor: pointer;
+      transition: background 0.2s, color 0.2s;
+    }
+    .shadow-row:hover {
+      background: #222 !important;
+      color: #00ffcc;
+    }
+    .plus-btn-custom {
+      width: 2vw;
+      height: 2vw;
+      font-size: 1.33em;
+      border-radius: 50%;
+      border: 2.5px solid #ffe066;
+      background: none;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      margin: 0 auto;
+      transition: box-shadow 0.2s;
+      box-shadow: 0 1px 4px #ffe06633;
+      cursor: pointer;
+      padding: 0;
+    }
+    .plus-btn-custom:focus {
+      outline: none;
+      box-shadow: 0 0 0 2px #ffe06688;
+    }
+    .plus-sign {
+      color: #fff9db;
+      font-weight: bold;
+      font-size: 2.3vw;
+      text-shadow: 0 0 2px #ffe066, 0 0 4px #ffe066;
+    }
+    .green-black-edit {
+      background: #111 !important;
+      color: #00ff88 !important;
+      caret-color: #00ff88;
+    }
   </style>
 </head>
 <body class="section">
@@ -25,7 +66,7 @@
       <div class="level-left">
        
         <div class="level-item">
-          <h1 class="title mb-0 ml-2">ODOBASIC ver 0.1</h1>
+          <h1 class="title mb-0 ml-2">OBA 19/6</h1>
         </div>
       </div>
       <div class="level-right">
@@ -46,54 +87,68 @@
         </div>
       </div>
     </nav>
-    <div class="box">
-      <form @submit.prevent="addChunk">
-        <div class="field has-addons">
-          <div class="control is-expanded">
-            <input class="input" type="text" placeholder="Enter chunk content..." x-model="newChunkContent">
-          </div>
-          <div class="control">
-            <button class="button is-primary" type="submit" :disabled="!newChunkContent.trim()">Submit</button>
-          </div>
-          <div class="control">
-            <button class="button is-light" type="button" @click="newChunkContent = ''">Clear</button>
-          </div>
-        </div>
-      </form>
-    </div>
-    <div class="box">
-      <table class="table is-fullwidth is-striped">
-        <thead>
-          <tr>
-            <th>#</th>
-            <th>Content</th>
-            <th>Select</th>
-            <th>Order</th>
-            <th>Delete</th>
-          </tr>
-        </thead>
-        <tbody>
-          <template x-for="(chunk, idx) in chunks" :key="chunk.chunk_id">
-            <tr :class="{'chunk-row': true, 'selected': chunk.chunk_select, 'unselected': !chunk.chunk_select, 'latest-row': chunk.chunk_id === latestRowId}">
-              <td x-text="chunk.chunk_index"></td>
-              <td style="max-width: 400px; word-break: break-all;" x-text="chunk.chunk_content"></td>
-              <td>
-                <input type="checkbox" :checked="chunk.chunk_select" @change="toggleSelect(chunk)">
-              </td>
-              <td>
-                <div class="buttons has-addons">
-                  <button class="button is-small move-btn" :disabled="idx === 0" @click="moveChunk(idx, -1)">&#8593;</button>
-                  <button class="button is-small move-btn" :disabled="idx === chunks.length - 1" @click="moveChunk(idx, 1)">&#8595;</button>
-                </div>
-              </td>
-              <td>
-                <button class="button is-danger is-small" @click="deleteChunk(chunk)">Delete</button>
+    <div class="box" style="display: flex; flex-direction: row; gap: 2vw;">
+      <div style="width: 60vw; min-width: 300px;">
+        <table class="table is-fullwidth is-striped is-hoverable">
+          <thead>
+            <tr>
+              <th class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">#</th>
+              <th>Content</th>
+              <th class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">Select</th>
+              <th class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">Order</th>
+              <th class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">Delete</th>
+            </tr>
+          </thead>
+          <tbody>
+            <template x-for="(chunk, idx) in chunks" :key="chunk.chunk_id">
+              <tr :class="{'chunk-row': true, 'selected': chunk.chunk_select, 'unselected': !chunk.chunk_select, 'latest-row': chunk.chunk_id === latestRowId}">
+                <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;" x-text="chunk.chunk_index"></td>
+                <td style="max-width: 400px; word-break: break-all; cursor: pointer;" 
+                  :contenteditable="editingChunkId === chunk.chunk_id"
+                  @click="enableEdit(chunk)"
+                  @blur="saveEdit(chunk, $event)"
+                  @keydown.enter.prevent="saveEdit(chunk, $event)"
+                  @keydown.esc="cancelEdit()"
+                  x-text="chunk.chunk_content"
+                  :tabindex="editingChunkId === chunk.chunk_id ? 0 : -1"
+                ></td>
+                <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">
+                  <input type="checkbox" :checked="chunk.chunk_select" @change="toggleSelect(chunk)">
+                </td>
+                <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">
+                  <div class="buttons has-addons is-centered">
+                    <button class="button is-small move-btn" style="padding:0 0.3em;" :disabled="idx === 0" @click="moveChunk(idx, -1)">&#8593;</button>
+                    <button class="button is-small move-btn" style="padding:0 0.3em;" :disabled="idx === chunks.length - 1" @click="moveChunk(idx, 1)">&#8595;</button>
+                  </div>
+                </td>
+                <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center;">
+                  <button class="button is-danger is-small" style="padding:0 0.5em;" @click="deleteChunk(chunk)">x</button>
+                </td>
+              </tr>
+            </template>
+            <!-- Shadow row for new insert -->
+            <tr x-show="!insertingNew" class="shadow-row" @click="startInsertRow()">
+              <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center; color: #bbb;">+</td>
+              <td colspan="4" style="color: #bbb; cursor: pointer;">click to insert new</td>
+            </tr>
+            <tr x-show="insertingNew" class="shadow-row">
+              <td class="is-narrow" style="width:5vw; min-width:2.5em; text-align:center; color: #00ff88; background: #111;">+</td>
+              <td colspan="4">
+                <div contenteditable="true" class="insert-editable green-black-edit" x-ref="insertInput"
+                  @keydown.enter.prevent="saveInsertRow($event)"
+                  @keydown.esc="cancelInsertRow()"
+                  style="outline: none; min-height: 1.5em; background: #111; color: #00ff88; border-radius: 4px; padding: 0.2em 0.5em;"
+                ></div>
               </td>
             </tr>
-          </template>
-        </tbody>
-      </table>
-      <div x-show="chunks.length === 0" class="has-text-grey">No chunks yet.</div>
+          </tbody>
+        </table>
+        <div x-show="chunks.length === 0" class="has-text-grey">No chunks yet.</div>
+      </div>
+      <div style="flex: 1; min-width: 200px; background: #fffbe6; border-radius: 8px; padding: 2vw; box-shadow: 0 2px 8px #ffe06633;">
+        <h2 class="title is-5">OMP generated</h2>
+        <pre id="omp_output" x-text="ompOutput"></pre>
+      </div>
     </div>
   </div>
   <script>
@@ -107,6 +162,11 @@
         user: null,
         _initialized: false,
         latestRowId: null,
+        showAddChunk: false,
+        editingChunkId: null,
+        ompOutput: '',
+        insertingNew: false,
+        _insertingRowLock: false,
         async init() {
           console.log('init entered')
           if (this._initialized) return;
@@ -148,6 +208,7 @@
             .order('chunk_index', { ascending: true });
           if (!error) {
             this.chunks = data;
+            this.updateOmpOutput();
           }
         },
         async addChunk() {
@@ -170,6 +231,7 @@
             this.chunks.sort((a, b) => a.chunk_index - b.chunk_index);
             this.newChunkContent = '';
             this.latestRowId = data[0].chunk_id;
+            this.updateOmpOutput();
           }
         },
         async deleteChunk(chunk) {
@@ -177,6 +239,7 @@
           await this.supabase.from('chunk').delete().eq('chunk_id', chunk.chunk_id);
           this.chunks = this.chunks.filter(c => c.chunk_id !== chunk.chunk_id);
           await this.reindexChunks();
+          this.updateOmpOutput();
         },
         async moveChunk(idx, dir) {
           let newIdx = idx + dir;
@@ -190,6 +253,7 @@
           await this.supabase.from('chunk').update({ chunk_index: b.chunk_index }).eq('chunk_id', b.chunk_id);
           this.chunks.sort((x, y) => x.chunk_index - y.chunk_index);
           this.latestRowId = a.chunk_id;
+          this.updateOmpOutput();
         },
         async toggleSelect(chunk) {
           chunk.chunk_select = !chunk.chunk_select;
@@ -204,6 +268,17 @@
             }
           }
           this.chunks.sort((a, b) => a.chunk_index - b.chunk_index);
+          this.updateOmpOutput();
+        },
+        updateOmpOutput() {
+          // Concatenate chunk_content in chunk_index order
+          if (!this.chunks || !this.chunks.length) {
+            this.ompOutput = '';
+            return;
+          }
+          // Sort to be sure
+          const sorted = [...this.chunks].sort((a, b) => a.chunk_index - b.chunk_index);
+          this.ompOutput = sorted.map(c => c.chunk_content).join('\n');
         },
         get displayName() {
           if (!this.user) return 'guest';
@@ -215,6 +290,63 @@
           if (!this.user) return 'guest';
           if (this.user.email) return this.user.email;
           return 'guest';
+        },
+        enableEdit(chunk) {
+          this.editingChunkId = chunk.chunk_id;
+          this.$nextTick(() => {
+            // Focus the cell for editing
+            const row = document.querySelector(`tr[tabindex='0'] td[contenteditable]`);
+            if (row) row.focus();
+          });
+        },
+        async saveEdit(chunk, event) {
+          const newContent = event.target.innerText;
+          if (chunk.chunk_content !== newContent) {
+            chunk.chunk_content = newContent;
+            await this.supabase.from('chunk').update({ chunk_content: newContent }).eq('chunk_id', chunk.chunk_id);
+            this.updateOmpOutput();
+          }
+          this.editingChunkId = null;
+        },
+        cancelEdit() {
+          this.editingChunkId = null;
+        },
+        startInsertRow() {
+          this.insertingNew = true;
+          this.$nextTick(() => {
+            if (this.$refs.insertInput) {
+              this.$refs.insertInput.innerText = '';
+              this.$refs.insertInput.focus();
+            }
+          });
+        },
+        async saveInsertRow(event) {
+          // Only save on Enter, not on blur
+          if (event.type === 'blur') return;
+          const value = event.target.innerText.trim();
+          if (value.length > 0 && !this._insertingRowLock) {
+            this._insertingRowLock = true;
+            let maxIndex = this.chunks.length ? Math.max(...this.chunks.map(c => c.chunk_index)) : 0;
+            let { data, error } = await this.supabase
+              .from('chunk')
+              .insert({
+                chunk_content: value,
+                chunk_select: true,
+                chunk_index: maxIndex + 1
+              })
+              .select();
+            if (!error && data && data.length) {
+              this.chunks.push(data[0]);
+              this.chunks.sort((a, b) => a.chunk_index - b.chunk_index);
+              this.latestRowId = data[0].chunk_id;
+              this.updateOmpOutput();
+            }
+            this._insertingRowLock = false;
+          }
+          this.insertingNew = false;
+        },
+        cancelInsertRow() {
+          this.insertingNew = false;
         }
       }
     }
